[metadata]
name = add_pd
author = Jacob Jeffries
author_email = jwjeffr@clemson.edu
url = https://github.com/MUEXLY/add_pd
long_description_content_type = text/markdown
long_description = file: README.md
version = 0.0.1

[options]
python_requires = >=3.8
install_requires =
    numpy
    ovito
packages =
    add_pd

[options.entry_points]
console_scripts =
    add-pd = add_pd:executable

[options.extras_require]
dev = 
    mypy
    pylint
    pytest